--- a/index.html
+++ b/index.html
@@ -6,8 +6,15 @@
     <title>Document</title>
     <link rel="stylesheet" href="stylr.css">
 </head>
-<body>
-    <h1>Amor para a vida</h1>
-    <img src=./94ed6ac2ce854c192ba148f1eefad7a3.jpg"descricaoimagem">
+<body><img src="./Cupido em Ação.jpeg" alt="descricao imagem"> 
+    <p>Eu sou um cupido</p>
+    <h1>Estou juntando casais</h1>
+    <p>Esse documento tem como  finalidade te dar dicas para conquistar seu amor pra vida </p>
+    <div>
+        <p>HTML</p>
+        <p>CSS</p>
+        <p>JAVA</p>
+        <p>Programação</p>
+    </div>
 </body>
 </html>
